# suap-mcp

./: .gitignore  README.md  pyproject.toml
docs/: planejamento.md
examples/: openai_agent.py
src/suap_mcp/: config.py  errors.py  log.py  server.py
src/suap_mcp/tools/: comum.py  edu.py  token.py
